fix : @Builder 로 변경